# ChangeLog for sci-chemistry/relax
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/relax/ChangeLog,v 1.31 2014/12/05 08:04:50 jlec Exp $

*relax-3.3.4 (05 Dec 2014)

  05 Dec 2014; Justin Lecher <jlec@gentoo.org> +relax-3.3.4.ebuild:
  Version BUmp

*relax-3.3.3 (25 Nov 2014)

  25 Nov 2014; Justin Lecher <jlec@gentoo.org> +relax-3.3.3.ebuild:
  Version Bump

*relax-3.3.2 (17 Nov 2014)

  17 Nov 2014; Justin Lecher <jlec@gentoo.org> +relax-3.3.2.ebuild:
  Version Bump

*relax-3.3.1 (10 Oct 2014)

  10 Oct 2014; Justin Lecher <jlec@gentoo.org> +relax-3.3.1.ebuild:
  Version BUmp

*relax-3.3.0 (15 Sep 2014)

  15 Sep 2014; Justin Lecher <jlec@gentoo.org> +relax-3.3.0.ebuild:
  Version Bump

*relax-3.2.3 (04 Jul 2014)

  04 Jul 2014; Justin Lecher <jlec@gentoo.org> +relax-3.2.3.ebuild:
  Version Bump

*relax-3.2.2 (06 Jun 2014)

  06 Jun 2014; Justin Lecher <jlec@gentoo.org> +relax-3.2.2.ebuild,
  +files/relax-3.2.2-gentoo.patch:
  Version Bump

*relax-3.2.1 (26 May 2014)

  26 May 2014; Justin Lecher <jlec@gentoo.org> +relax-3.2.1.ebuild:
  Version Bump

*relax-3.2.0 (22 May 2014)

  22 May 2014; Justin Lecher <jlec@gentoo.org> +relax-3.2.0.ebuild:
  Version BUmp

*relax-3.1.7-r1 (15 May 2014)

  15 May 2014; Justin Lecher <jlec@gentoo.org> +relax-3.1.7-r1.ebuild,
  +files/relax-3.1.7-dpar.patch:
  Backport fix for http://gna.org/bugs/?22039

*relax-3.1.7 (18 Mar 2014)

  18 Mar 2014; Justin Lecher <jlec@gentoo.org> +relax-3.1.7.ebuild:
  Version BUmp

*relax-3.1.6 (06 Mar 2014)

  06 Mar 2014; Justin Lecher <jlec@gentoo.org> +relax-3.1.6.ebuild:
  Version Bump

*relax-3.1.5 (05 Feb 2014)

  05 Feb 2014; Justin Lecher <jlec@gentoo.org> +relax-3.1.5.ebuild:
  Version Bump

*relax-3.1.4 (03 Feb 2014)

  03 Feb 2014; Justin Lecher <jlec@gentoo.org> +relax-3.1.4.ebuild:
  Version Bump

*relax-3.1.3 (17 Jan 2014)

  17 Jan 2014; Justin Lecher <jlec@gentoo.org> +relax-3.1.3.ebuild:
  Version Bump
